--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,15 @@
-FROM python:3.9
+FROM python:3.11-slim
 
 WORKDIR /app
 
 COPY requirements.txt .
 
+RUN python -m pip install --upgrade pip
+
+RUN pip install gunicorn==21.2.0
+
 RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
-
-COPY ./entrypoint.sh /
-
-RUN chmod +x entrypoint.sh
-
-ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "foodgram.wsgi"]
