--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,27 @@
 server {
     listen 80;
+    server_tokens off;
+
+    location /api/ {
+      proxy_pass http://backend:8000;
+      proxy_set_header          Host $host;
+    }
+
+    location /admin/ {
+      proxy_pass http://backend:8000;
+      proxy_set_header          Host $host;
+    }
+    
+    location /media/ {
+        alias /app/media/;
+    }
+
     location /api/docs/ {
-        root /usr/share/nginx/html;
+        root /app/static/;
         try_files $uri $uri/redoc.html;
     }
     location / {
-        root /usr/share/nginx/html;
+        root /app/static/;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
