--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [flake8]
 ignore =
+    I001,
+    I004,
     W503
 exclude =
     tests/,
     */migrations/,
     venv/,
-    env/,
-    */management/
+    env/
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
